Create beans-spring module.
Spring no longer supports java 11, move spring classes into a separate maven module.
Change compiler configuration to release java 11 classes for core and beans while releasing java 17 for beans-spring.
Update integration tests to work with both JDK11 and JDK17.
Bump version to 2.5.0-SNAPSHOT as spring classes have moved from the beans module to the beans-spring module.