@@ -6,7 +6,7 @@
   <groupId>org.ldaptive</groupId>
   <artifactId>ldaptive-parent</artifactId>
   <packaging>pom</packaging>
-  <version>2.4.1-SNAPSHOT</version>
+  <version>2.5.0-SNAPSHOT</version>
   <name>LDAPTIVE PARENT</name>
   <description>Java LDAP API</description>
   <url>https://www.ldaptive.org</url>
@@ -52,8 +52,7 @@
   </developers>
 
   <properties>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.release>11</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <checkstyle.dir>src/main/checkstyle</checkstyle.dir>
@@ -61,7 +60,7 @@
     <pmd.dir>src/main/pmd</pmd.dir>
     <org.slf4j.version>2.0.16</org.slf4j.version>
     <io.netty.version>4.1.115.Final</io.netty.version>
-    <org.springframework.version>5.3.39</org.springframework.version>
+    <org.springframework.version>6.2.0</org.springframework.version>
     <japicmp.enabled>false</japicmp.enabled>
     <japicmp.oldVersion>2.3.0</japicmp.oldVersion>
   </properties>
@@ -69,6 +68,7 @@
   <modules>
     <module>core</module>
     <module>beans</module>
+    <module>beans-spring</module>
   </modules>
 
   <dependencyManagement>
@@ -96,6 +96,11 @@
       <dependency>
         <groupId>org.ldaptive</groupId>
         <artifactId>ldaptive-beans</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.ldaptive</groupId>
+        <artifactId>ldaptive-beans-spring</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -332,8 +337,6 @@
           <showWarnings>true</showWarnings>
           <compilerArgs>
             <arg>-Xlint:unchecked</arg>
-            <arg>--add-exports</arg>
-            <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
           </compilerArgs>
         </configuration>
       </plugin>
@@ -517,6 +520,7 @@
           </newVersion>
           <parameter>
             <ignoreNonResolvableArtifacts>true</ignoreNonResolvableArtifacts>
+            <ignoreMissingClasses>true</ignoreMissingClasses>
             <onlyBinaryIncompatible>true</onlyBinaryIncompatible>
             <breakBuildOnBinaryIncompatibleModifications>${japicmp.enabled}</breakBuildOnBinaryIncompatibleModifications>
             <packagingSupporteds>
@@ -526,14 +530,6 @@
               <exclude>org.ldaptive.transport.netty</exclude>
             </excludes>
           </parameter>
-          <dependencies>
-            <!-- include optional dependencies -->
-            <dependency>
-              <groupId>org.springframework</groupId>
-              <artifactId>spring-expression</artifactId>
-              <version>${org.springframework.version}</version>
-            </dependency>
-          </dependencies>
         </configuration>
         <executions>
           <execution>
